// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`depositBoosted does nothing when the action is not a swap 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "createdAt": Any<Date>,
  "depositAmount": "1000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositReceivedAt": 2022-12-06T14:31:39.000Z,
  "depositReceivedBlockIndex": "0-15",
  "destAddress": "0x6fd76a7699e6269af49e9c63f01f61464ab21d1c",
  "destAsset": "Eth",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fees": [],
  "id": Any<BigInt>,
  "intermediateAmount": null,
  "nativeId": 1n,
  "srcAsset": "Btc",
  "swapDepositChannelId": Any<BigInt>,
  "swapExecutedAt": null,
  "swapExecutedBlockIndex": null,
  "swapInputAmount": "1000000",
  "swapOutputAmount": null,
  "txHash": null,
  "type": "SWAP",
  "updatedAt": Any<Date>,
}
`;

exports[`depositBoosted updates the values for an existing swap 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "createdAt": Any<Date>,
  "depositAmount": "1000000",
  "depositBoostedAt": Any<Date>,
  "depositBoostedBlockIndex": Any<String>,
  "depositReceivedAt": 2022-12-06T14:31:39.000Z,
  "depositReceivedBlockIndex": "0-15",
  "destAddress": "0x6fd76a7699e6269af49e9c63f01f61464ab21d1c",
  "destAsset": "Eth",
  "effectiveBoostFeeBps": 5,
  "egressId": null,
  "fees": [
    {
      "amount": "500",
      "asset": "Btc",
      "id": Any<BigInt>,
      "swapId": Any<BigInt>,
      "type": "BOOST",
    },
    {
      "amount": "1000",
      "asset": "Btc",
      "id": Any<BigInt>,
      "swapId": Any<BigInt>,
      "type": "INGRESS",
    },
  ],
  "id": Any<BigInt>,
  "intermediateAmount": null,
  "nativeId": 1n,
  "srcAsset": "Btc",
  "swapDepositChannelId": Any<BigInt>,
  "swapExecutedAt": null,
  "swapExecutedBlockIndex": null,
  "swapInputAmount": "1000000",
  "swapOutputAmount": null,
  "txHash": null,
  "type": "SWAP",
  "updatedAt": Any<Date>,
}
`;
